# onionize

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  README.ru.md
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  clippy.yml  release.yml
locales/: app.yml
src/: args.rs  keygen.rs  lib.rs  main.rs  proxy.rs  tor.rs  utils.rs
tests/: cli_test.rs  i18_test.rs  mock_proxy_test.rs  test_keygen.rs  test_tor.rs  tor_config_test.rs
