[package]
name = "onionize"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/andsemenoff/arti-onion-proxy"
description = "A CLI tool for creating ephemeral Tor Onion Services to proxy local ports."
categories = ["command-line-utilities", "network-programming"]
license = "MIT OR Apache-2.0"
keywords = ["tor", "proxy", "onion", "tunnel", "cli"]
include = ["src/**/*", "LICENSE-*", "README.md", "locales/**/*", "assets/**/*"]

[dependencies]
# https://github.com/rusqlite/rusqlite for SQLite support
rusqlite = { version = "0.37", features = ["bundled"] }

# Main Arti client. Enabling onion services support
arti-client = { version = "0.37", features = [ "full"] }  # "onion-service-client", "onion-service-service", "experimental-api", "tokio", "native-tls",

# For Tor configuration https://docs.rs/tor-config/latest/tor_config/
tor-config = "0.37.0"

tor-hscrypto = "0.37.0"

# https://crates.io/crates/tor-hsservice
tor-hsservice = { version = "0.37.0", features = ["restricted-discovery"] }

# https://crates.io/crates/tor-cell
tor-cell = "0.37.0"

tor-rtcompat = { version = "0.37.0", features = ["tokio", "native-tls"] }

# Asynchronous runtime
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3.1"

# Utilities for working with futures/streams
futures = "0.3"

# Error handling
anyhow = "1.0"

# Logging utilities
# https://docs.rs/tracing/latest/tracing/
tracing = "0.1"

# https://docs.rs/tracing-subscriber/latest/tracing_subscriber/
tracing-subscriber = "0.3"

# JSON serialization/deserialization
# https://docs.rs/serde/latest/serde/
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# https://docs.rs/safelog/latest/safelog/
safelog = "0.7.0"

# Command line argument parsing
# https://docs.rs/clap/latest/clap/
clap = { version = "4.5", features = ["derive"] }

# https://github.com/longbridge/rust-i18n
rust-i18n = "3"

# https://docs.rs/indicatif/latest/indicatif/
indicatif = "0.18"
rand = "0.9.2"
hex = "0.4.3"

# https://docs.rs/directories/latest/directories/
directories = "6.0"

# https://docs.rs/qrcode/latest/qrcode/
qrcode = "0.14.1"

# https://docs.rs/sys-locale/latest/sys_locale/
sys-locale = "0.3.2"

# For X25519 key generation and handling
# https://docs.rs/x25519-dalek/latest/x25519_dalek/
x25519-dalek = { version = "2.0", features = ["static_secrets", "getrandom"] }

# For base32 encoding of the public key
# https://docs.rs/base32/latest/base32/
base32 = "0.5.1"

# Low-level crypto library used by Arti
tor-llcrypto = "0.37.0"

[lib]
name = "create"           # The name of the library
path = "src/lib.rs"

[dev-dependencies]
# Library for mocking the runtime in tests
tor-rtmock = "0.37.0" 
# Utilities for IO testing
tor-llcrypto = "0.37.0"

[[bin]]
name = "onionize" # The name of the binary
path = "src/main.rs"